# auto-ria-scraper

./: .gitignore  README.md  database.sqlite  pyproject.toml
src/: bot.py  notifications.py  scraper.py  settings.py  subscription.py  utils.py
src/db/: create.py  crud.py  session.py
src/db/models/: __init__.py  car_images.py  cars.py
